fix layout issues

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -9,7 +9,6 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-  margin-bottom: 2em;
 }
 
 .footer ul {
