--- a/src/css/form.css
+++ b/src/css/form.css
@@ -1,8 +1,13 @@
+form {
+  max-width: 520px;
+  margin: 0 auto;
+}
+
 input,
 select {
   width: 100%;
   outline: none;
-  padding: 10px 15px;
+  padding: 8px 14px;
   font: inherit;
   line-height: 1.6;
   color: var(--black);
