--- a/src/css/template.css
+++ b/src/css/template.css
@@ -8,7 +8,7 @@
 
 .color-panel {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   margin-bottom: 2em;
 }
 
